--- a/HrPortalV2.Web/Views/Jobs/Index.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Index.cshtml
@@ -8,13 +8,13 @@
 <table id="myTable" class="table">
     <thead>
         <tr>
-            <th>
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.Company)
             </th>
-            <th>Eylemler</th>
+            <th class="text-nowrap all" data-orderable="false">Eylemler</th>
         </tr>
     </thead>
     <tbody>
@@ -27,7 +27,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Company.Name)
                 </td>
-                <td>
+                <td class="text-nowrap">
                     <a asp-action="SendMessageToJob" asp-route-jobId="@item.Id" asp-controller="Messages" asp-area="" class="btn btn-primary btn-sm">Mesaj Gönder</a>
                     <a asp-action="Apply" asp-route-jobid="@item.Id" asp-controller="Jobs" asp-area="" class="btn btn-primary btn-sm">Başvuru Yap</a>
                     <a asp-action="Details" asp-route-id=@item.Id asp-controller="Jobs" asp-area="" class="btn btn-warning btn-sm">İlan Detayı</a>
