--- a/HrPortalV2.Web/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Index.cshtml
@@ -53,7 +53,7 @@
                 @Html.DisplayNameFor(model => model.Occupation)
             </th>
             
-            <th class="text-nowrap all">Eylemler</th>
+            <th class="text-nowrap all" data-orderable="false">Eylemler</th>
         </tr>
     </thead>
     <tbody>
