--- a/HrPortalV2.Web/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Create.cshtml
@@ -99,13 +99,17 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="CityId" class="control-label"></label>
-                    <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">   <option value="">Şehir seçiniz</option></select>
+                    <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">   
+                        <option value="">Şehir seçiniz</option>
+                    </select>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="CountyId" class="control-label"></label>
-                    <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   <option value="">İlçe seçiniz</option></select>
+                    <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">
+                        <option value="">İlçe seçiniz</option>
+                    </select>
                 </div>
                 </div>
 
@@ -373,7 +377,9 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="https://cdn.ckeditor.com/ckeditor5/10.1.0/classic/ckeditor.js"></script>
     <script>
-       
+        $(function () {
+            CountryChange($("#CountryId"));
+        });
         function CountryChange(elm) {
             $.get('@Url.Action("GetCities","Companies")', { countryId: $(elm).val() }, function (data) {
                 var $select = $("#CityId");
