--- a/HrPortalV2.Web/Views/Resumes/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Edit.cshtml
@@ -93,19 +93,22 @@
                     <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId" onchange="CountryChange(this)">
                         <option value="">Ülke seçiniz</option>
                     </select>
-
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="CityId" class="control-label"></label>
-                    <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">   <option value="">Şehir seçiniz</option></select>
+                    <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">
+                        <option value="">Şehir seçiniz</option>
+                    </select>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="CountyId" class="control-label"></label>
-                    <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   <option value="">İlçe seçiniz</option></select>
+                    <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">
+                        <option value="">İlçe seçiniz</option>
+                    </select>
                 </div>
             </div>
 
@@ -304,7 +307,7 @@
                     <input asp-for="Hobbies" class="form-control" />
                     <span asp-validation-for="Hobbies" class="text-danger"></span>
                 </div>
-                
+
                 <div class="form-group">
                     <div>
                         <label>
@@ -372,4 +375,30 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="https://cdn.ckeditor.com/ckeditor5/10.1.0/classic/ckeditor.js"></script>
+    <script>
+        function CountryChange(elm) {
+            $.get('@Url.Action("GetCities","Companies")', { countryId: $(elm).val() }, function (data) {
+                var $select = $("#CityId");
+                $select.empty();
+                $select.append('<option value="">Şehir seçiniz</option>');
+                $.each(data, function (key, value) {
+                    $select.append('<option value="' + value.id + '">' + value.name + '</option>');
+                });
+                CityChange($select);
+            });
+        }
+
+        function CityChange(elm) {
+            $.get('@Url.Action("GetCounties","Companies")', { cityId: $(elm).val() }, function (data) {
+                var $select = $("#CountyId");
+                $select.empty();
+                $select.append('<option value="">İlçe seçiniz</option>');
+                $.each(data, function (key, value) {
+                    $select.append('<option value="' + value.id + '">' + value.name + '</option>');
+                });
+            });
+        }
+
+    </script>
 }
