--- a/HrPortalV2.Web/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_Layout.cshtml
@@ -774,11 +774,11 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="col-md-3 col-sm-6 col-xs12 footer-block">
                                 <h2>E-posta Aboneliği</h2>
                                 <div class="subscribe-form">
-                                    <form action="javascript:;">
+                                    <form asp-action="AddSubscription" asp-controller="Home" asp-area="">
                                         <div class="input-group">
                                             <input type="email" placeholder="mail@email.com" class="form-control">
                                             <span class="input-group-btn">
-                                                <button class="btn" type="submit">Gönder</button>
+                                                <button type="submit" class="btn btn-sm btn-primary">Gönder</button>
                                             </span>
                                         </div>
                                     </form>
