--- a/HrPortalV2.Web/Views/Home/Index.cshtml
+++ b/HrPortalV2.Web/Views/Home/Index.cshtml
@@ -19,70 +19,78 @@
 <!-- END PAGE BREADCRUMBS -->
 <div class="search-page search-content-4">
     <div class="search-bar bordered">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="İş İlanı Ara, Örn: Yazılım, sistem, tasarım...">
-                    <span class="input-group-btn">
-                        <button class="btn green-soft uppercase bold" type="button">Ara</button>
-                    </span>
+        <form method="get">
+            <div class="row">
+                <div class="col-sm-2" style="padding-top:15px">
+                    <label for="search" class="control-label uppercase bold pull-right">İş İlanı Ara</label>
                 </div>
+                <div class="col-sm-8">
+
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="İş İlanı Ara, Örn: Yazılım, sistem, tasarım..." id="search" name="search" value="@ViewBag.Search">
+                        <span class="input-group-btn">
+                            <button class="btn green-soft uppercase bold btn-danger" type="submit">Ara</button>
+                        </span>
+                    </div>
+
+
+                </div>
+                <div class="col-sm-2 extra-buttons">
+                    <button class="btn grey-steel uppercase bold" type="reset">Sıfırla</button>
+                </div>
+
             </div>
-            <div class="col-lg-4 extra-buttons">
-                <button class="btn grey-steel uppercase bold" type="button">Sıfırla</button>
-                <button class="btn grey-cararra font-blue" type="button">Gelişmiş Arama</button>
-            </div>
-        </div>
+        </form>
     </div>
-    <div class="search-table table-responsive">
-        <h3 style="text-align:center">Öne Çıkan İş İlanları</h3>
-        <table class="table table-bordered table-striped table-condensed">
-            <thead class="bg-blue">
+<div class="search-table table-responsive">
+    <h3 style="text-align:center">Öne Çıkan İş İlanları</h3>
+    <table class="table table-bordered table-striped table-condensed">
+        <thead class="bg-blue">
+            <tr>
+                <th>
+                    <a href="javascript:;">Logo</a>
+                </th>
+                <th>
+                    <a href="javascript:;">Firma Adı</a>
+                </th>
+                <th>
+                    <a href="javascript:;">Pozisyon</a>
+                </th>
+                <th>
+                    <a href="javascript:;">Konum</a>
+                </th>
+                <th><a href="javascript:;">Eylemler</a></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in (IEnumerable<HrPortalV2.Models.Job>)ViewBag.FeaturedJobs)
+            {
                 <tr>
-                    <th>
-                        <a href="javascript:;">Logo</a>
-                    </th>
-                    <th>
-                        <a href="javascript:;">Firma Adı</a>
-                    </th>
-                    <th>
-                        <a href="javascript:;">Pozisyon</a>
-                    </th>
-                    <th>
-                        <a href="javascript:;">Konum</a>
-                    </th>
-                    <th><a href="javascript:;">Eylemler</a></th>
+                    <td>
+                        <a href="javascript:;">
+                            <img src="~/Uploads/@item.Company?.Logo" alt="@item.Company?.Name" width="80" />
+                        </a>
+                    </td>
+                    <td>
+                        <a href="@item.Company?.Website" target="_blank">@item.Company?.Name</a>
+                    </td>
+                    <td>
+                        <strong>
+                            <a asp-action="Details" asp-controller="Jobs" asp-route-id="@item.Id">@item.Title</a>
+                        </strong>
+                    </td>
+                    <td> @item.Company?.County?.Name </td>
+                    <td>
+                        <a asp-action="Apply" asp-controller="Jobs" asp-route-jobid="@item.Id" class="btn btn-sm btn-primary">
+                            Başvur
+                        </a>
+                        <a asp-action="Create" asp-controller="Messages" asp-route-companyid="@item.CompanyId" class="btn btn-sm btn-success">
+                            Mesaj Gönder
+                        </a>
+                    </td>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in (IEnumerable<HrPortalV2.Models.Job>)ViewBag.FeaturedJobs)
-                {
-                    <tr>
-                        <td>
-                            <a href="javascript:;">
-                                <img src="~/Uploads/CompanyLogos/@item.Company?.Logo" alt="@item.Company?.Name" width="80" />
-                            </a>
-                        </td>
-                        <td>
-                            <a href="@item.Company?.Website" target="_blank">@item.Company?.Name</a>
-                        </td>
-                        <td>
-                            <strong>
-                                <a asp-action="Details" asp-controller="Jobs" asp-route-id="@item.Id">@item.Title</a>
-                            </strong>
-                        </td>
-                        <td> @item.Company?.County?.Name </td>
-                        <td>
-                            <a asp-action="Apply" asp-controller="Jobs" asp-route-jobid="@item.Id" class="btn btn-sm btn-primary">
-                                Başvur
-                            </a>
-                            <a asp-action="Create" asp-controller="Messages" asp-route-companyid="@item.CompanyId" class="btn btn-sm btn-success">
-                                Mesaj Gönder
-                            </a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+            }
+        </tbody>
+    </table>
+</div>
 </div>
