--- a/HrPortalV2.Web/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_Layout.cshtml
@@ -776,7 +776,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <div class="subscribe-form">
                                     <form asp-action="AddSubscription" asp-controller="Home" asp-area="">
                                         <div class="input-group">
-                                            <input type="email" placeholder="mail@email.com" class="form-control">
+                                            <input type="email" placeholder="mail@email.com" class="form-control" name="email">
                                             <span class="input-group-btn">
                                                 <button type="submit" class="btn btn-sm btn-primary">Gönder</button>
                                             </span>
