--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="row">
-    <div class="col-md-4" enctype="multipart/form-data">
+    <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Yeni bir hesap oluştur.</h4>
             <hr />
@@ -34,11 +34,6 @@
                     <option value="Company">İşverenim</option>
                 </select>
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Photo" class="control-label"></label>
-                <input type="file" name="Resim Dosyası"  class="form-control" />
-                <span asp-validation-for="Input.Photo" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Kaydol</button>
         </form>
