--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -40,6 +40,8 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="/assets/layouts/layout2/css/layout.min.css" rel="stylesheet" type="text/css" />
     <link href="/assets/layouts/layout2/css/themes/blue.min.css" rel="stylesheet" type="text/css" id="style_color" />
     <link href="/assets/layouts/layout2/css/custom.min.css" rel="stylesheet" type="text/css" />
+    <link href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
@@ -918,7 +920,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         </a>
                         <ul class="sub-menu">
                             <li class="nav-item  ">
-                                <a href="elements_steps.html" class="nav-link ">
+                                <a href="elements_steps.html" class="nav-link">
                                     <span class="title">Steps</span>
                                 </a>
                             </li>
@@ -2301,7 +2303,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!-- END CONTAINER -->
     <!-- BEGIN FOOTER -->
     <div class="page-footer">
-        
+
         <div class="page-footer-inner">
             2016 &copy; Metronic Theme By
             <a target="_blank" href="http://keenthemes.com">Keenthemes</a> &nbsp;|&nbsp;
@@ -2347,10 +2349,10 @@ License: You must have a valid license purchased only from themeforest(the above
         <div class="quick-nav-overlay"></div>
         <!-- END QUICK NAV -->
         <!--[if lt IE 9]>
-        <script src="/assets/global/plugins/respond.min.js"></script>
-        <script src="/assets/global/plugins/excanvas.min.js"></script>
-        <script src="/assets/global/plugins/ie8.fix.min.js"></script>
-        <![endif]-->
+    <script src="/assets/global/plugins/respond.min.js"></script>
+    <script src="/assets/global/plugins/excanvas.min.js"></script>
+    <script src="/assets/global/plugins/ie8.fix.min.js"></script>
+    <![endif]-->
         <!-- BEGIN CORE PLUGINS -->
         <script src="/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
         <script src="/assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
@@ -2363,10 +2365,25 @@ License: You must have a valid license purchased only from themeforest(the above
         <script src="/assets/global/scripts/app.min.js" type="text/javascript"></script>
         <!-- END THEME GLOBAL SCRIPTS -->
         <!-- BEGIN THEME LAYOUT SCRIPTS -->
+
         <script src="/assets/layouts/layout2/scripts/layout.min.js" type="text/javascript"></script>
         <script src="/assets/layouts/layout2/scripts/demo.min.js" type="text/javascript"></script>
         <script src="/assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
         <script src="/assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
+        <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+        <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js" type="text/javascript"></script>
+
+
+        <script>
+            $(document).ready(function () {
+                $('#tblRecords').DataTable({
+                    "responsive": true,
+                    "language": {
+                        "url": "//cdn.datatables.net/plug-ins/1.10.19/i18n/Turkish.json"
+                    }
+                });
+            });
+        </script>
         <!-- END THEME LAYOUT SCRIPTS -->
         @RenderSection("Scripts", required: false)
 </body>
