--- a/HrPortalV2.Web/Views/Resumes/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Edit.cshtml
@@ -461,6 +461,7 @@
             $(elm).css('display', 'none');
         }
     </script>
+    <!-- Deneyimi Sil fonksiyonu -->
     <script>
         function RemoveExperience(elm) {
             $(elm).parent('div').parent('div').parent('div').remove();
