--- a/HrPortalV2.Web/Views/Jobs/Create.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Create.cshtml
@@ -28,12 +28,12 @@
 
 
                 <label asp-for="CompanyId" class="control-label"></label>
-                <div class="input-group">
+                <div class="input-group" >
                     <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId">
                         <option value=""></option>
                     </select>
                     <span class="input-group-btn">
-                        <button type="button" class="btn btn-default">Firma Ekle...</button>
+                        <button type="button" class="btn btn-default" asp-action="JobsController" asp-controller="Controllers">Firma Ekle...</button>
                     </span>
                 </div>
                 <span asp-validation-for="CompanyId" class="text-danger"></span>
