--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Create.cshtml
@@ -34,7 +34,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" class="form-control"></select>
+                <select asp-for="Gender" class="form-control" id="formGender">
+                    <option value="">Cinsiyet Seçiniz</option>
+                    <option value="">Male</option>
+                    <option value="">Female</option>
+                </select>
+                
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
