--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model HrPortalV2.Models.Company
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Düzenle";
 }
 
-<h2>Edit</h2>
 
-<h4>Company</h4>
+
+<h4>Firmalar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -113,7 +113,7 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Kaydet" class="btn btn-default" />
             </div>
         </form>
     </div>
