--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Details.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Details.cshtml
@@ -1,14 +1,9 @@
 ﻿@model HrPortalV2.Models.Job
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detaylar";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>Job</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Title)
