class="Text-Nowrap"

--- a/HrPortalV2.Web/Areas/Admin/Views/Messages/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Messages/Index.cshtml
@@ -12,43 +12,43 @@
 <table class="table" id="tblRecords">
     <thead>
         <tr>
-            <th>
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.From)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.FromName)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.To)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.ToName)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.IsRead)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.IsApproved)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.CreateDate)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.UpdateDate)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.UpdatedBy)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.IPAddress)
             </th>
             <th class="text-nowrap all">
