--- a/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
@@ -12,31 +12,31 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.Resume)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.Job)
             </th>
-            <th>
+            <th class="text-nowrap ">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
+            <th text-nowrap>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
+            <th text-nowrap>
                 @Html.DisplayNameFor(model => model.CreateDate)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.UpdateDate)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.UpdatedBy)
             </th>
-            <th>
+            <th class="text-nowrap all" >
                 @Html.DisplayNameFor(model => model.IPAddress)
             </th>
             <th></th>
@@ -72,7 +72,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
-            <td>
+            <td class="text-nowrap all">
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
