--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
@@ -15,145 +15,145 @@
             <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.ResumeName)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Photo)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Gender)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.MaritalStatus)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.MobilePhone)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Email)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.TotalExperience)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.UsingCigarette)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsTravelDisabled)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsDisabled)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsSubsidized)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsCurrentlyWorking)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsSeekingJob)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.LastCompany)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.LastPosition)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.MilitaryStatus)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.LastEducation)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.LastDepartment)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.GraduationYear)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.ForeignLanguages)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsApproved)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsActive)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Occupation)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Objective)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Country)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.City)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.County)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Projects)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Skills)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Hobbies)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.DrivingLicense)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Courses)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Blog)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.LinkedIn)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.GitHub)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Dribbble)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Behance)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Youtube)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Instagram)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Facebook)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Twitter)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.CreateDate)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.UpdateDate)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.UpdatedBy)
             </th>
-            <th class="text-nowrap ">
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IPAddress)
             </th>
             <th></th>
@@ -306,7 +306,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
-            <td>
+            <td class="text-nowrap">
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
