--- a/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" id="tblRecords">
     <thead>
         <tr>
             <th class="text-nowrap all">
