--- a/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>JobApplication</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -56,14 +56,11 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-sm btn-primary" />
+                <a asp-action="Index" class="btn btn-sm btn-danger">İptal</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
