--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Yeni Meslek</a>
 </p>
-<table class="table" id="tblRecord">
+<table class="table" id="tblRecords">
     <thead>
         <tr>
             <th>
@@ -21,7 +21,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Company)
             </th>
-            <th>
+            <th>s
                 @Html.DisplayNameFor(model => model.PublishDate)
             </th>
             <th>
@@ -54,7 +54,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.IPAddress)
             </th>
-            <th></th>
+            <th class="text-nowrap all">Eylemler</th>
         </tr>
     </thead>
     <tbody>
