--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Create.cshtml
@@ -34,17 +34,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" class="form-control" id="formGender">
+                <select asp-for="Gender" class="form-control" id="formGender" asp-items="@Html.GetEnumSelectList(typeof(Gender))">
                     <option value="">Cinsiyet Seçiniz</option>
-                    <option value="">Male</option>
-                    <option value="">Female</option>
                 </select>
                 
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MaritalStatus" class="control-label"></label>
-                <select asp-for="MaritalStatus" class="form-control"></select>
+                <select asp-for="MaritalStatus" class="form-control" asp-items="@Html.GetEnumSelectList(typeof(MaritalStatus))"></select>
                 <span asp-validation-for="MaritalStatus" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -63,42 +61,42 @@
                 <span asp-validation-for="TotalExperience" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="">
                     <label>
                         <input asp-for="UsingCigarette" /> @Html.DisplayNameFor(model => model.UsingCigarette)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="">
                     <label>
                         <input asp-for="IsTravelDisabled" /> @Html.DisplayNameFor(model => model.IsTravelDisabled)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="">
                     <label>
                         <input asp-for="IsDisabled" /> @Html.DisplayNameFor(model => model.IsDisabled)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="">
                     <label>
                         <input asp-for="IsSubsidized" /> @Html.DisplayNameFor(model => model.IsSubsidized)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="">
                     <label>
                         <input asp-for="IsCurrentlyWorking" /> @Html.DisplayNameFor(model => model.IsCurrentlyWorking)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="">
                     <label>
                         <input asp-for="IsSeekingJob" /> @Html.DisplayNameFor(model => model.IsSeekingJob)
                     </label>
@@ -140,14 +138,14 @@
                 <span asp-validation-for="ForeignLanguages" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="">
                     <label>
                         <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div class="">
                     <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                     </label>
