--- a/HrPortalV2.Web/Areas/Admin/Views/Messages/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Messages/Index.cshtml
@@ -12,46 +12,46 @@
 <table class="table" id="tblRecords">
     <thead>
         <tr>
-            <th>
+            <th class="hidden">
                 @Html.DisplayNameFor(model => model.From)
             </th>
-            <th>
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.FromName)
             </th>
-            <th>
+            <th class="hidden">
                 @Html.DisplayNameFor(model => model.To)
             </th>
-            <th>
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.ToName)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsRead)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsApproved)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.CreateDate)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.UpdateDate)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.UpdatedBy)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IPAddress)
             </th>
-            <th class="text-nowrap all">
+            <th class="text-nowrap all" data-orderable="false">
                 Eylemler
             </th>
         </tr>
@@ -59,46 +59,46 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td class="text-nowrap all">
+            <td>
                 @Html.DisplayFor(modelItem => item.From)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.FromName)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.To)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.ToName)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.IsRead)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.IsApproved)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.CreateDate)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.CreatedBy)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.UpdateDate)
             </td>
-            <td class="text-nowrap">
+            <td>
                 @Html.DisplayFor(modelItem => item.UpdatedBy)
             </td>
-            <td class="text-nowrap all">
+            <td>
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
-            <td class="text-nowrap all">
+            <td class="text-nowrap">
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Düzenle</a> 
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-success">Detaylar</a> 
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Sil</a>
