--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Yeni Meslek</a>
 </p>
-<table class="table" id="tblRecord">
+<table class="table" id="tblRecords">
     <thead>
         <tr>
             <th class="text-nowrap all">
