--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<HrPortalV2.Models.Sector>
+﻿@model IEnumerable<HrPortalV2.Models.Country>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-
+<h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Yeni Sektör</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
