--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model HrPortalV2.Models.Occupation
+﻿@model HrPortalV2.Models.Country
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h2>Yeni Meslek</h2>
+<h2>Create</h2>
 
-
+<h4>Country</h4>
+<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -42,14 +43,14 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Kaydet" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">İptal</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
