--- a/HrPortalV2.Web/Areas/Admin/Views/Occupations/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Occupations/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Yeni Meslek</a>
 </p>
 <table class="table" id="tblRecords">
     <thead>
